# game_of_life

./: Cargo.toml  README.md
.cargo/: config
app/: Cargo.toml  Makefile  build_rust_deps.sh  manifest.yaml
app/src/: lib.rs
src/: cell.rs  cell_buffer.rs  lib.rs  main.rs  plugin.rs  system.rs  test.rs  tiles.rs  timer.rs  universe.rs
src/universe/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
