[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["app"]

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.12.0"}
bevy-inspector-egui = "0.21.0"
bevy_dylib = "0.12.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
