[package]
name = "game_of_life"
version = "0.1.0"
publish = false
authors = ["Augustin Gjini <augustin.gjini@pm.me>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["app"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.12.0"}
bevy-inspector-egui = "0.21.0"
#bevy_dylib = "0.12.0"
rand = "0.8.5"

[build-dependencies]
embed-resource = "1.4"
