[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "app"
crate-type = ["staticlib", "cdylib"]

[dependencies]
game_of_life = { path = ".." }
bevy = { version = "0.12", default-features = false }

# As long as Kira doesn't expose a feature for this, we need to enable it our self
# See https://github.com/tesselode/kira/pull/51
[target."cfg(target_os = \"android\")".dependencies.cpal]
version = "0.15"
features = ["oboe-shared-stdcxx"]

[package.metadata.android]
package = "org.agjini.game_of_life"
apk_name = "GameOfLife"  # ToDo same as GAME_OSX_APP_NAME in release workflow
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Game of life"
